# optox

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  environment.yml  install.py  requirements.txt  settings.cmake  setup.py
.github/workflows/: test_build.yaml
compare_test/: compare_averagepooling_pytorch_python.py  compare_averagepooling_torch_tensorflow.py  compare_maxpooling_pytorch_python.py  compare_maxpooling_torch_tensorflow.py
docs/: about.rst  conf.py  index.rst  installation.rst  unittesting.rst
docs/api/: add_operator.rst  exceptions.rst  extend_python.rst  extend_pytorch.rst  extend_tensorflow.rst  operator.rst  optopy.rst  optopy.test.rst  optotf.activations.rst  optotf.averagepooling.rst  optotf.demosaicing.rst  optotf.gpunufft.rst  optotf.keras.rst  optotf.maxpooling.rst  optotf.nabla.rst  optotf.pad.rst  optotf.rst  optotf.scale.rst  optotf.test.rst  optotf.warp.rst  optoth.activations.rst  optoth.rst  optoth.test.rst  shape.rst  tensor.rst  typetraits.rst
python/: CMakeLists.txt  py_averagepooling_operator.cpp  py_gpunufft_operator.cpp  py_gpunufft_singlecoil_operator.cpp  py_maxpooling_operator.cpp  py_pad_operator.cpp  py_scale_operator.cpp  py_utils.h  py_warp_operator.cpp  setup.py.in
python/optopy/: averagepooling.py  gpunufft.py  maxpooling.py  nabla.py  nabla2.py  pad.py  scale.py  warp.py
python/optopy/test/: test_averagepooling.py  test_gpunufft.py  test_maxpooling.py  test_nabla.py  test_nabla2.py  test_pad.py  test_warp.py
pytorch/: CMakeLists.txt  setup.py.in  th_act_operator.cpp  th_averagepooling_operator.cpp  th_demosaicing_operator.cpp  th_gpunufft_operator.cpp  th_gpunufft_singlecoil_operator.cpp  th_maxpooling_operator.cpp  th_nabla_operator.cpp  th_pad_operator.cpp  th_rot_operator.cpp  th_scale_operator.cpp  th_utils.h  th_warp_operator.cpp
pytorch/optoth/: averagepooling.py  demosaicing.py  gpunufft.py  maxpooling.py  nabla.py  nabla2.py  pad.py  rot.py  scale.py  warp.py
pytorch/optoth/activations/: act.py
pytorch/optoth/test/: test_activations.py  test_averagepooling.py  test_demosaicing.py  test_gpunufft.py  test_maxpooling.py  test_nabla.py  test_nabla2.py  test_pad.py  test_rot.py  test_warp.py
src/: CMakeLists.txt  reduce.cuh  typetraits.h  utils.h
src/operators/: averagepooling_operator.cu  averagepooling_operator.h  demosaicing_operator.h  gpunufft_operator.cu  gpunufft_operator.h  ioperator.h  maxpooling_operator.cu  maxpooling_operator.h  nabla2_operator.h  nabla_operator.h  pad_operator.cu  pad_operator.h  rot_operator.h  scale_operator.cu  scale_operator.h  warp_operator.cu  warp_operator.h
src/operators/activations/: act.h  act_linear.h  act_rbf.h  act_spline.h
src/tensor/: d_tensor.h  h_tensor.h  shape.h  tensor.h
tensorflow/: CMakeLists.txt  setup.py.in  tf_activations_operator.cpp  tf_averagepooling_operator.cpp  tf_demosaicing_operator.cpp  tf_gpunufft_operator.cpp  tf_maxpooling_operator.cpp  tf_nabla_operator.cpp  tf_pad_operator.cpp  tf_scale_operator.cpp  tf_utils.h  tf_warp_operator.cpp
tensorflow/optotf/activations/: __init__.py
tensorflow/optotf/averagepooling/: __init__.py
tensorflow/optotf/demosaicing/: __init__.py
tensorflow/optotf/gpunufft/: __init__.py
tensorflow/optotf/keras/: activations.py  averagepooling.py  gpunufft.py  maxpooling.py  nabla.py  pad.py  scale.py  warp.py
tensorflow/optotf/maxpooling/: __init__.py
tensorflow/optotf/nabla/: __init__.py
tensorflow/optotf/pad/: __init__.py
tensorflow/optotf/scale/: __init__.py
tensorflow/optotf/test/: test_activations.py  test_activations_keras.py  test_averagepooling.py  test_averagepooling_keras.py  test_gpunufft.py  test_gpunufft_keras.py  test_maxpooling.py  test_maxpooling_keras.py  test_nabla.py  test_nabla_keras.py  test_pad.py  test_pad_keras.py  test_warp.py  test_warp_keras.py
tensorflow/optotf/warp/: __init__.py
